# ds25a-1-fancyproject

./: .gitignore  README.md  aircraft_dashboard.py  app.py  pyproject.toml
.streamlit/: config.toml
data_acquisition/: build_processed_dataset.py  prepare_slim_aircraftverse.py
data_raw/aircraftverse_slim/design_1/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_100/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_1000/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10000/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10001/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10002/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10003/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10004/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10005/: design_low_level.json  design_tree.json  output.json
data_raw/aircraftverse_slim/design_10006/: design_low_level.json  design_tree.json  output.json
docs/: Aufgabenstellung.md  _quarto.yml  bewertungsraster_visualisierungsprojekt.md  data_report.qmd  deployment.qmd  evaluation.qmd  index.qmd  meeting_notes.qmd  project_charta.qmd  viz_design_report.qmd
(+83067 files in other folders)
