[project]
name = "sample-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10,<3.11",
    "numpy>=1.26,<2.2",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "ydata-profiling>=4.12.2",
]
